@@ -76,5 +76,22 @@
 
 	</dependencies>
 
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<!-- This configuration allows the JUnit test runner to find the unit tests -->
+				<configuration>
+					<argLine>
+						--add-opens=com.avereon.zevra/com.avereon.product=ALL-UNNAMED
+						--add-opens=com.avereon.zevra/com.avereon.settings=ALL-UNNAMED
+						--add-opens=com.avereon.zevra/com.avereon.undo=ALL-UNNAMED
+						--add-opens=com.avereon.zevra/com.avereon.util=ALL-UNNAMED,com.fasterxml.jackson.databind
+					</argLine>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+
 </project>
 
